Meet code review standards
Change to pure flex box layout(no float), correct single quotes to double-quotes, and remove type from css reference in HTML.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
   <header>
+
     <picture>
       <img class="hypno" src="http://res.cloudinary.com/paulmreese/image/upload/v1526164349/Clear-Outline-IF-HP-Frog.png" alt="Mesmerizing Herpein">
     </picture>
+
     <div class="right text-right">
       <h1>Paul M Reese</h1>
       <h3>Front-End Web Design</h3>
     </div>
+
   </header>
 
   <main>
@@ -109,17 +112,17 @@
 
     <footer>
 
-      <p class="right">
+      <p class="footer-text text-center full-width">
+        Paul M Reese &copy;2018
+      </p>
+
+
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
           <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
             alt="Valid CSS!"
             class="badge" />
         </a>
-      </p>
 
-      <p class="footer-text text-center full-width">
-        Paul M Reese &copy;2018
-      </p>
     </footer>
 
   </main>
